# armarinho-fernandes-automation

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: executar_selenium.yml
src/: chrome_automation.py  config.py  logger.py  main.py
