[project]
name = "armarinho-fernandes"
version = "0.1.0"
description = "Automação com selenium para solicitação de relatórios"
authors = [
    {name = "Vincenzo",email = "vincenzovgn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.41.0,<5.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
